objects/ssot__IssueRelationship__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Issue Relationship Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssueId__c</fullName>
        <label>Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssueObject__c</fullName>
        <label>Issue Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssueRelationshipNumber__c</fullName>
        <label>Issue Relationship Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueId__c</fullName>
        <label>Related Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueObject__c</fullName>
        <label>Related Issue Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipTypeName__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009515816_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IssueRelationship_IssueId_map_Proble_rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>IssueRelationship_IssueId_map_Proble_rel</relationshipLabel>
        <relationshipName>rel_1702009515816_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009516260_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IssueRelationship_RelatedIssueId_map_rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>IssueRelationship_RelatedIssueId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009516260_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009517159_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IssueRelationship_RelatedIssueId_map_rel</label>
        <referenceTo>ssot__Incident__dlm</referenceTo>
        <relationshipLabel>IssueRelationship_RelatedIssueId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009517159_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>